replaced ExoPlayer as default video player with libVLC for greater formar compatibility

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name=".views.SettingsSortingActivity"
             android:exported="false" />
         <activity
-            android:name=".views.VideoViewerActivity"
+            android:name=".views.VideoViewerVlcActivity"
             android:exported="false" />
         <activity
             android:name=".views.ImageViewerActivity"
