--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,14 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     // Improved version over default MediaPlayer.
-    implementation 'com.google.android.exoplayer:exoplayer:2.17.1'
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
+    // Allows to play a lot more file formats compared to MediaPlayer.
+    implementation 'org.videolan.android:libvlc-all:3.3.5'
     // Provides quicker file access compared to DocumentFile.
     implementation "com.lazygeniouz:documentfile_compat:0.8"
     // Advanced image loading routines.
